--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
 
 			<form action="http://getsimpleform.com/messages?form_api_token=9b501984332731d2181f0ca879100ec7" method="post">
 			  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-			  <input type='hidden' name='redirect_to' value='<the complete return url e.g. http://colingerber.com/thanks.html>' />
+			  <input type='hidden' name='redirect_to' value='<http://colingerber.com/thanks.html>' />
 			  <!-- all your input fields here.... -->
 			  <ul>
 					<li>
