new travel map image

--- a/personal.html
+++ b/personal.html
@@ -127,7 +127,7 @@
 
         <figure class="">
             <a href="travels.html" >
-            <img src="img/earthquake_thumb.jpg" alt="" >
+            <img src="img/travel_map.jpg" alt="" >
             </a>
             <figcaption>
                 <p>I just started learning leaflet recently and thought it would be a fun project to try to map all the places I have traveled around the world. (Work in progress)</p>
