Updated link to live site

--- a/clinicaldata.html
+++ b/clinicaldata.html
@@ -105,7 +105,7 @@
         <h6>Links</h6>
         <ul class="mbottom">
             <li><a href="https://github.com/jasonost/clinicaltrials">Github Repository</a></li>
-            <li><a href="http://groups.ischool.berkeley.edu/clinicaltrials/">Live Site</a></li>
+            <li><a href="http://people.ischool.berkeley.edu/~jost/i247-final/">Live Site</a></li>
         </ul>
 
         <h6>Other Contributors</h6>
@@ -127,7 +127,7 @@
         <section class="grid col-three-quarters mq2-col-two-thirds mq3-col-full">
     
         <figure class="">
-            <a href="http://groups.ischool.berkeley.edu/clinicaltrials/" >
+            <a href="http://people.ischool.berkeley.edu/~jost/i247-final/" >
             <img src="img/ClinicaltrialsThumb.jpg" alt="" >
             </a>
             <figcaption>
