--- a/dataviz.html
+++ b/dataviz.html
@@ -165,6 +165,7 @@ path.chord {
 
 
         <menu>
+            <h6>Page Navigation</h6>
             <ul>
                 <li><a href="#navchord" class="arrow">Chord Chart</a></li>
                 <li><a href="#navHighcharts" class="arrow">Highcharts</a></li>
