update wedding page

--- a/LGCGwedding.html
+++ b/LGCGwedding.html
@@ -83,9 +83,9 @@
 
   <header id="navtop">
     <a href="LGCGwedding.html" class="logo fleft">
-            <span id="nameheader">Lindsay and Colin's Wedding</span>
+            <!-- <span id="nameheader">Lindsay and Colin's Wedding</span> -->
             <!-- Ues for logo -->
-      <!-- <img src="img/logo.png" alt="Designa Studio"> -->
+      <img src="img/logo.png" alt="Designa Studio">
     </a>
 
     <!-- <nav class="fright">
@@ -115,17 +115,19 @@
 
     <div class="grid col-one-half mq2-col-full aboutme">
       <div id="personalpic">
-                <img src="img/wedding/Colin_Linds_Pic.JPG" alt="" class="roundedimg">
+                <img src="img/wedding/colin_linds_pier.jpg" alt="" class="roundedimg">
+                <p style="font-size:10px; font-style:italic;">Photo Credit: First Mate, John Wierather</p>
             </div>
 
-            <h2>Wedding Stuff</h2>
+            <h2 style="color:#0e0cbf">6.20.2015</h2>
 
-      <p>Hi friends and family.</p>
+      <p style="font-size:18px">Ahoy friends and family!</p>
 
-            <p>Before Berkeley I worked in a <a href="http://www.ninds.nih.gov/research/labs/68.htm">Neurophysiological Pharmacology Lab</a> at the National Institute of Neurological Disease and Stroke at the National Institutes of Health. My undergraduate degree was a B.S. in Neuroscience from the University of California, Santa Barbara.</p>
+            <p>Welcome to our temporary wedding website. We are looking forward to sharing our special day with you at one of our favorite spots. Lindsay went to <a href="http://www.uncw.edu">UNC Wilmington</a> and Colin proposed to Lindsay at a beach house right by where we are having the ceremony.</p>
 
-            <p>Playing water polo is my passion and I have been competitively playing water polo since 2003. I also love to travel and started <a href="personal.html">making a map</a> to track my travels.
-      </p>
+            <p>Wrightsville Beach is a popular vacation spot in North Carolina so we encourage you to book your travel early. The ceremony will be held on the beach (Beach Access 12) and the reception will be at a restaurant near by. Check out the map to the right to see where everything is located. Depending on your schedule you can book at one of the hotels listed below or if you are able to soak up the sun a little bit longer we have also included links to local beach house rental websites.</p>
+
+            <p>Lindsay's brother will be taking the helm soon for the website development so there will be much more to see in a few weeks.</p>
     </div>
 
 
@@ -169,6 +171,7 @@
   <header class="grid col-full">
       <hr>
       <h3 class="fleft">Suggested Hotels</h3>
+      <p style="font-size:14px;">Bellow hotels have a prefered rate under Goldsworth/Gerber Wedding</p>
       <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
     </header>
 
@@ -190,7 +193,7 @@
         </a>
         <figcaption>
           <a href="http://www.ihg.com/holidayinnresorts/hotels/us/en/wrightsville-beach/wrgnc/hoteldetail" class="thumbtext">Holiday Inn Resort</a>
-          <p>Nuclear forensics research project.</p>
+          <p>If you want to wake up to the sound of the ocean, this is the place for you.</p>
         </figcaption>
       </figure>
 
@@ -209,7 +212,7 @@
     <section class="works grid-wrap">
     <header class="grid col-full">
             <hr>
-            <h3 class="fleft">Rental Companies</h3>
+            <h3 class="fleft">Beach House Rentals</h3>
             <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
         </header>
 
