added wedding seal

--- a/LGCGwedding.html
+++ b/LGCGwedding.html
@@ -85,7 +85,7 @@
     <a href="LGCGwedding.html" class="logo fleft">
             <!-- <span id="nameheader">Lindsay and Colin's Wedding</span> -->
             <!-- Ues for logo -->
-      <img src="img/logo.png" alt="Designa Studio">
+      <img src="img/wedding/LCG-seal.jpg" alt="Wedding Seal" class='weddingSeal'>
     </a>
 
     <!-- <nav class="fright">
