wedding page center seal

--- a/LGCGwedding.html
+++ b/LGCGwedding.html
@@ -82,7 +82,7 @@
 <div class="container">
 
   <header id="navtop">
-    <a href="LGCGwedding.html" class="logo fleft">
+    <a href="LGCGwedding.html" class="">
             <!-- <span id="nameheader">Lindsay and Colin's Wedding</span> -->
             <!-- Ues for logo -->
       <img src="img/wedding/LCG-seal.jpg" alt="Wedding Seal" class='weddingSeal'>
