more updates to wedding page

--- a/LGCGwedding.html
+++ b/LGCGwedding.html
@@ -123,7 +123,7 @@
 
       <p style="font-size:18px">Ahoy friends and family!</p>
 
-            <p>Welcome to our temporary wedding website. We are looking forward to sharing our special day with you at one of our favorite spots. Lindsay went to <a href="http://www.uncw.edu">UNC Wilmington</a> and Colin proposed to Lindsay at a beach house right by where we are having the ceremony.</p>
+            <p>Welcome to our temporary wedding website. We are looking forward to sharing our special day with you at one of our favorite spots. Lindsay went to <a href="http://www.uncw.edu" target="_">UNC Wilmington</a> and Colin proposed to Lindsay at a beach house right by where we are having the ceremony.</p>
 
             <p>Wrightsville Beach is a popular vacation spot in North Carolina so we encourage you to book your travel early. The ceremony will be held on the beach (Beach Access 12) and the reception will be at a restaurant near by. Check out the map to the right to see where everything is located. Depending on your schedule you can book at one of the hotels listed below or if you are able to soak up the sun a little bit longer we have also included links to local beach house rental websites.</p>
 
@@ -170,42 +170,46 @@
 <section class="works grid-wrap">
   <header class="grid col-full">
       <hr>
-      <h3 class="fleft">Suggested Hotels</h3>
+      <h3 style="text-align:left;" class="">Suggested Hotels</h3>
       <p style="font-size:14px;">Bellow hotels have a prefered rate under Goldsworth/Gerber Wedding</p>
       <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
     </header>
 
       <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-        <a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html">
+        <a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html" target="_">
         <img src="img/wedding/hampton.jpg" alt="" class="thumb">
         <span class="zoom"></span>
         </a>
         <figcaption>
-          <a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html" class="thumbtext">Hampton Inn & Suites</a>
-          <p>Parkinson's disease research at the NIH.</p>
+          <a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html" class="thumbtext" target="_">Hampton Inn & Suites</a>
         </figcaption>
+        <p>Only a mile from the reception and two from the beach.</p>
+        <p>1989 Eastwood Road <br>
+        Wilmington, NC 28403</p>
       </figure>
 
       <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-        <a href="http://www.ihg.com/holidayinnresorts/hotels/us/en/wrightsville-beach/wrgnc/hoteldetail">
+        <a href="http://www.ihg.com/holidayinnresorts/hotels/us/en/wrightsville-beach/wrgnc/hoteldetail" target="_">
         <img src="img/wedding/holiday.jpg" alt="" class="thumb">
         <span class="zoom"></span>
         </a>
         <figcaption>
-          <a href="http://www.ihg.com/holidayinnresorts/hotels/us/en/wrightsville-beach/wrgnc/hoteldetail" class="thumbtext">Holiday Inn Resort</a>
-          <p>If you want to wake up to the sound of the ocean, this is the place for you.</p>
+          <a href="http://www.ihg.com/holidayinnresorts/hotels/us/en/wrightsville-beach/wrgnc/hoteldetail" target="_" class="thumbtext">Holiday Inn Resort</a>
         </figcaption>
+        <p>If you want to wake up to the sound of the ocean, this is the place for you.</p>
+        <p>1706 N. Lumina Ave <br>
+        Wrightsville Beach, NC 28480</p>
       </figure>
 
       <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-        <a href="http://www.marriott.com/hotels/travel/ilmri-residence-inn-wilmington-landfall/">
-        <img src="img/wedding/residence.jpg" alt="" class="thumb">
+        <a href="" target="_">
+        <img src="img/work_in_progress.jpg" alt="" class="thumb">
         <span class="zoom"></span>
         </a>
         <figcaption>
-          <a href="http://www.marriott.com/hotels/travel/ilmri-residence-inn-wilmington-landfall/" class="thumbtext">Residence Inn</a>
-          <p>Visualization from assorted projects.</p>
+          <a href="" target="_" class="thumbtext">Coming Soon</a>
         </figcaption>
+        <p>Coming Soon.</p>
       </figure>
   </section>
 
@@ -217,55 +221,55 @@
         </header>
 
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="http://www.bryantre.com/">
+                <a href="http://www.bryantre.com/" target="_">
                 <img src="img/wedding/bryant.jpg" alt="" class="thumb">
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="http://www.bryantre.com/" class="thumbtext">Bryant Real Estate</a>
-                    <p>Website created for the Peace Corps.</p>
+                    <a href="http://www.bryantre.com/" target="_" class="thumbtext">Bryant Real Estate</a>
                 </figcaption>
+                <p>Week long beach house rentals.</p>
             </figure>
 
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="http://www.intracoastalrealty.com/">
+                <a href="http://www.intracoastalrealty.com/" target="_">
                 <img src="img/wedding/intracoastal.jpg" alt="" class="thumb">
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="http://www.intracoastalrealty.com/" class="thumbtext">Intracoastal Reality</a>
-                    <p>A web app for exploring PLOS.</p>
+                    <a href="http://www.intracoastalrealty.com/" target="_" class="thumbtext">Intracoastal Reality</a>
                 </figcaption>
+                <p>Week long beach house rentals.</p>
             </figure>
 
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="http://www.homeaway.com/vacation-rentals/north-carolina/wrightsville-beach/r7982">
+                <a href="http://www.homeaway.com/vacation-rentals/north-carolina/wrightsville-beach/r7982" target="_">
                 <img src="img/wedding/homeaway.png" alt="" class="thumb">
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="http://www.homeaway.com/vacation-rentals/north-carolina/wrightsville-beach/r7982" class="thumbtext">HomeAway</a>
-                    <p>Visualizing clinical data.</p>
+                    <a href="http://www.homeaway.com/vacation-rentals/north-carolina/wrightsville-beach/r7982" target="_" class="thumbtext">HomeAway</a>
                 </figcaption>
+                <p>Shorter term house renting options.</p>
             </figure>
 
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="http://www.vrbo.com/vacation-rentals/usa/north-carolina/coastal/southern-coast/wrightsville-beach">
+                <a href="http://www.vrbo.com/vacation-rentals/usa/north-carolina/coastal/southern-coast/wrightsville-beach" target="_">
                 <img src="img/wedding/vrbo.png" alt="" class="thumb">
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="http://www.vrbo.com/vacation-rentals/usa/north-carolina/coastal/southern-coast/wrightsville-beach" class="thumbtext">VRBO</a>
-                    <p>Explore Assorted Small Projects</p>
+                    <a href="http://www.vrbo.com/vacation-rentals/usa/north-carolina/coastal/southern-coast/wrightsville-beach" target="_" class="thumbtext">VRBO</a>
                 </figcaption>
+                <p>Shorter term house renting options.</p>
             </figure>
     </section>
   </div> <!--main-->
 
 <div class="divide-top">
-    <p class="fleft">Connect</p>
+    <!-- <p class="fleft">Connect</p> -->
   <footer class="grid-wrap">
-    <ul class="grid col-one-third social">
+    <!-- <ul class="grid col-one-third social">
       <li><a href="https://www.linkedin.com/pub/colin-gerber/28/981/999">LinkedIn</a></li>
             <li><a href="https://github.com/cmgerber">Github</a></li>
             <li><a href="http://www.quora.com/Colin-Gerber">Quora</a></li>
@@ -282,12 +286,12 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="works.html">Portfolio</a></li>
+        <li><a href="works.html">Portfolio</a></li> -->
         <!-- <li><a href="services.html">Services</a></li>
         <li><a href="blog.html">Blog</a></li> -->
-        <li><a href="contact.html">Contact</a></li>
+        <!-- <li><a href="contact.html">Contact</a></li>
       </ul>
-    </nav>
+    </nav> -->
   </footer>
 </div>
 
