add new clinical trials final project page

--- a/clinicaldata.html
+++ b/clinicaldata.html
@@ -99,7 +99,7 @@
             <li>Pandas</li>
             <li>D3.js</li>
             <li>JavaScript</li>
-            <li>mySQL</li>
+            <li>PostrgeSQL</li>
         </ul>
 
         <h6>Links</h6>
