--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 		     <div class="slides">
 		       <div class="slide">
 		           	<figure>
-		                 <img src="img/DC_Bike_Share_Chord_Chart_Thumb.jpg" alt="" class="slidethumb">
+		                 <img src="img/clinical_trial_final_thumb.jpg" alt="" class="slidethumb">
 		                 <figcaption>
 		                 	<div>
-		                 	<h5>Data Visualization</h5>
-		                 	<p>A chord chart of the interaction between NE DC Bike Share stations.</p>
+		                 	<h5>Clinical Trials Search</h5>
+		                 	<p>Creating a search interface for patients to use to find new clinical trials</p>
 		                 	</div>
 		                 </figcaption>
 		             	</figure>
@@ -200,8 +200,8 @@
 				</a>
 				<figcaption>
 					<a href="neuroscience.html" class="thumbtext">Neuroscience</a>
-					<p>Parkinson's disease research at the NIH.</p>
 				</figcaption>
+                <p>Parkinson's disease research at the NIH.</p>
 			</figure>
 
 			<figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
@@ -211,19 +211,19 @@
 				</a>
 				<figcaption>
 					<a href="nuclearforensics.html" class="thumbtext">Nuclear Forensics</a>
-					<p>Nuclear forensics research project.</p>
 				</figcaption>
+                <p>Nuclear forensics research project.</p>
 			</figure>
 
 			<figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-				<a href="dataviz.html">
-				<img src="img/DC_Bike_Share_Chord_Chart_Thumb.jpg" alt="" class="thumb">
+				<a href="clinical_trials_final.html">
+				<img src="img/clinical_trial_final_thumb.jpg" alt="" class="thumb">
 				<span class="zoom"></span>
 				</a>
 				<figcaption>
-					<a href="dataviz.html" class="thumbtext">Data Visualizations</a>
-					<p>Visualization from assorted projects.</p>
+					<a href="clinical_trials_final.html" class="thumbtext">Clinical Trials Search Interface</a>
 				</figcaption>
+                <p>MIMS Final Project. Clinical Trials Final Project.</p>
 			</figure>
 
 			<figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
@@ -233,8 +233,8 @@
 				</a>
 				<figcaption>
 					<a href="censusmapper.html" class="thumbtext">Census Mapper</a>
-					<p>A website for mapping census data.</p>
 				</figcaption>
+                <p>A website for mapping census data.</p>
 			</figure>
 	</section>
 
@@ -252,8 +252,8 @@
                 </a>
                 <figcaption>
                     <a href="peacecorps.html" class="thumbtext">Peace Corps Hackathon</a>
-                    <p>Website created for the Peace Corps.</p>
                 </figcaption>
+                <p>Website created for the Peace Corps.</p>
             </figure>
 
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
@@ -263,8 +263,8 @@
                 </a>
                 <figcaption>
                     <a href="ploscloudexplorer.html" class="thumbtext">PLOS Cloud Explorer</a>
-                    <p>A web app for exploring PLOS.</p>
                 </figcaption>
+                <p>A web app for exploring the PLOS hierarchy and articles.</p>
             </figure>
 
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
@@ -274,19 +274,19 @@
                 </a>
                 <figcaption>
                     <a href="clinicaldata.html" class="thumbtext">Clinical Data Visualizations</a>
-                    <p>Visualizing clinical data.</p>
                 </figcaption>
+                <p>Visualizing clinical data from the AACT database.</p>
             </figure>
 
             <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="assorted_projects.html">
-                <img src="img/earthquake_thumb.jpg" alt="" class="thumb">
+                <a href="dataviz.html">
+                <img src="img/DC_Bike_Share_Chord_Chart_Thumb.jpg" alt="" class="thumb">
                 <span class="zoom"></span>
                 </a>
                 <figcaption>
-                    <a href="assorted_projects.html" class="thumbtext">Assorted Projects</a>
-                    <p>Explore Assorted Small Projects</p>
+                    <a href="dataviz.html" class="thumbtext">Data Visualizations</a>
                 </figcaption>
+                <p>Visualization from assorted projects.</p>
             </figure>
     </section>
 	</div> <!--main-->
