--- a/works.html
+++ b/works.html
@@ -119,14 +119,14 @@
 				</figure>
 
 				<figure class="grid col-one-third mq1-col-one-half mq2-col-one-third mq3-col-full work_1">
-					<a href="dataviz.html">
-					<img src="img/DC_Bike_Share_Chord_Chart_Thumb.jpg" alt="" class="thumb">
+					<a href="clinical_trials_final.html">
+					<img src="img/clinical_trial_final_thumb.jpg" alt="" class="thumb">
 					<span class="zoom"></span>
 					</a>
 					<figcaption>
-						<a href="dataviz.html" class="thumbtext">Data Visualizations</a>
-						<p>Visualization from assorted projects.</p>
+						<a href="clinical_trials_final.html" class="thumbtext">Clinical Trials Search Interface</a>
 					</figcaption>
+	                <p>MIMS Final Project. Clinical Trials Final Project.</p>
 				</figure>
 
 				<figure class="grid col-one-third mq1-col-one-half mq2-col-one-third mq3-col-full work_1">
@@ -172,6 +172,17 @@
 	                    <p>Visualizing clinical data.</p>
 	                </figcaption>
 	            </figure>
+
+				<figure class="grid col-one-third mq1-col-one-half mq2-col-one-third mq3-col-full work_1">
+					<a href="dataviz.html">
+					<img src="img/DC_Bike_Share_Chord_Chart_Thumb.jpg" alt="" class="thumb">
+					<span class="zoom"></span>
+					</a>
+					<figcaption>
+						<a href="dataviz.html" class="thumbtext">Data Visualizations</a>
+						<p>Visualization from assorted projects.</p>
+					</figcaption>
+				</figure>
 
 	            <figure class="grid col-one-third mq1-col-one-half mq2-col-one-third mq3-col-full work_1">
 	                <a href="assorted_projects.html">
