--- a/LGCGwedding.html
+++ b/LGCGwedding.html
@@ -171,7 +171,8 @@
   <header class="grid col-full">
       <hr>
       <h3 style="text-align:left;" class="">Suggested Hotels</h3>
-      <p style="font-size:14px;">Bellow hotels have a prefered rate under Goldsworth/Gerber Wedding</p>
+      <p style="font-size:14px;">Below hotels have a prefered rate under Goldsworth/Gerber Wedding<br>
+      <small>Please note because of the summer season these hotels require you to book two nights.</small></p>
       <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
     </header>
 
@@ -181,11 +182,16 @@
         <span class="zoom"></span>
         </a>
         <figcaption>
-          <a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html" class="thumbtext" target="_">Hampton Inn & Suites</a>
+          <p style='font-weight:bold;'>Hampton Inn & Suites</p>
         </figcaption>
         <p>Only a mile from the reception and two from the beach.</p>
         <p>1989 Eastwood Road <br>
         Wilmington, NC 28403</p>
+        <p>1 King - $169/night + tax<br>
+        2 Doubles - $199/night + tax</p>
+        <p>Book by May 9th to recieve group rate<br>
+        <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-GGW-20150619/index.jhtml?WT.mc_id=POG" target="_">Online reservations</a><br>
+        Call for reservation: 910-256-9600</p></p>
       </figure>
 
       <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
@@ -194,11 +200,15 @@
         <span class="zoom"></span>
         </a>
         <figcaption>
-          <a href="http://www.ihg.com/holidayinnresorts/hotels/us/en/wrightsville-beach/wrgnc/hoteldetail" target="_" class="thumbtext">Holiday Inn Resort</a>
+          <p style='font-weight:bold;'>Holiday Inn Resort</p>
         </figcaption>
         <p>If you want to wake up to the sound of the ocean, this is the place for you.</p>
         <p>1706 N. Lumina Ave <br>
         Wrightsville Beach, NC 28480</p>
+        <p>Ocean Front - $299/night + tax<br>
+        Harbor - $269/night + tax</p>
+        <p>Book by May 9th to recieve group rate<br>
+        Call for reservation: 910-256-2231</p>
       </figure>
 
       <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
@@ -207,7 +217,7 @@
         <span class="zoom"></span>
         </a>
         <figcaption>
-          <a href="" target="_" class="thumbtext">Coming Soon</a>
+          <p style='font-weight:bold;'>Coming Soon</p>
         </figcaption>
         <p>Coming Soon.</p>
       </figure>
