fix spellig error

--- a/lgcgwedding.html
+++ b/lgcgwedding.html
@@ -189,7 +189,7 @@
         Wilmington, NC 28403</p>
         <p>1 King - $169/night + tax<br>
         2 Doubles - $199/night + tax</p>
-        <p>Book by May 9th to recieve group rate<br>
+        <p>Book by May 9th to receive group rate<br>
         <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-GGW-20150619/index.jhtml?WT.mc_id=POG" target="_">Online reservations</a><br>
         Call for reservation: 910-256-9600</p></p>
       </figure>
@@ -207,7 +207,7 @@
         Wrightsville Beach, NC 28480</p>
         <p>Ocean Front - $299/night + tax<br>
         Harbor - $269/night + tax</p>
-        <p>Book by May 9th to recieve group rate<br>
+        <p>Book by May 9th to receive group rate<br>
         Call for reservation: 910-256-2231</p>
       </figure>
   </section>
